# filtering

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lint.sh  main.cpp
common/: CMakeLists.txt  constants.hpp  eventDispatcher.hpp  mmapReader.hpp  mmapWriter.hpp  randomSample.hpp  statistics.hpp  types.cpp  types.hpp  utils.hpp
common/test/: CMakeLists.txt  eventDispatcherTest.cpp  mmapTest.cpp  utilsTest.cpp
common/timer/: CMakeLists.txt  dummyClock.cpp  dummyClock.hpp  singleThreadedTimerManager.hpp  timer.cpp  timer.hpp
common/timer/test/: CMakeLists.txt  repeatingTimerTest.cpp  singleThreadedTimerManagerTest.cpp
fakeMarket/: CMakeLists.txt  IClient.hpp  basicClient.cpp  basicClient.hpp  client.cpp  client.hpp  clientUpdater.hpp  events.cpp  events.hpp  market.cpp  market.hpp  orderBook.cpp  orderBook.hpp  threadedClient.cpp  threadedClient.hpp
fakeMarket/test/: CMakeLists.txt  marketTest.cpp  orderBookTest.cpp
filters/: CMakeLists.txt  basicKF.cpp  deterministicEKF.hpp  deterministicEKF.ipp  kalmanFilter.cpp  kalmanFilter.hpp  kalmanFilter.ipp  mle.hpp  particleFilter.cpp  particleFilter.hpp  pythonFilter.cpp  pythonKF.cpp  stateSpaceModelTraits.hpp  stochasticEKF.hpp  stochasticEKF.ipp
filters/benchmark/: CMakeLists.txt  stochasticEKFBenchmark.cpp
filters/python/: dekf.cpp  kf.cpp  sekf.cpp
filters/test/: CMakeLists.txt  basicKFTest.cpp  deterministicEKFTest.cpp  kalmanFilterTest.cpp  particleFilterTest.cpp  stochasticEKFTest.cpp
kalmanFilter/: CMakeLists.txt  basicKF.cpp  basicKF.hpp
kalmanFilter/test/: CMakeLists.txt  basicKFTest.cpp
spline/: CMakeLists.txt  bspline.hpp  bspline.ipp
spline/test/: CMakeLists.txt  bsplineTest.cpp
stochasticModels/: CMakeLists.txt  linearFactoryMethods.hpp  linearGaussian.cpp  linearGaussian.hpp  linearGaussianTraits.hpp  randomWalk.cpp  randomWalk.hpp  randomWalk.ipp  stochasticVolatility.cpp  stochasticVolatility.hpp
stochasticModels/test/: CMakeLists.txt  randomWalkTest.cpp
timer/: CMakeLists.txt  dummyClock.cpp  dummyClock.hpp  singleThreadedTimerManager.hpp  timer.cpp  timer.hpp
timer/test/: CMakeLists.txt  repeatingTimerTest.cpp  singleThreadedTimerManagerTest.cpp
